public class AudioPlayer {
    private boolean songPlaying;

    public AudioPlayer() {
        // Constructor code here
    }

    public void playSong() {
        // Method code here
    }

    public void stopSong() {
        // Method code here
    }
}