import java.util.Scanner;

import java.util.ArrayList;

public class FileIO {
    Scanner scanner;
    private String highscorePath;

    public FileIO() {
        // Constructor code here
    }

    public ArrayList<Integer> readScoreboard(String path){
        //TODO sort arraylist so that the highest score is on top
        return null;
    }

    public void newScore(String path, int score){
    }

    // Define other methods as per your diagram
}