public class GameUI {
    private boolean overButton;

    public GameUI() {
        // Constructor code here
    }

    public boolean promptBinary(){
        return false;
    }

    public int promptNumeric(){
        return 0;
    }

    public boolean overButton(Button button){
        return false;
    }

    public void mousePressed(){
    }

    // Define other methods as per your diagram
}